# test_assignment_barter_platform

./: db.sqlite3  pyproject.toml  requirements.txt  sandbox.ipynb
config/: settings.py  urls.py
docs/: README.md
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_exchangeproposal_comment_and_more.py  0003_alter_exchangeproposal_options.py
templates/: base.html
templates/includes/: header.html  my_post.html  pagination.html  post.html  search.html
templates/posts/: delete_post.html  my_posts.html  new_post.html  posts.html
templates/proposals/: filter.html  my_proposals_list.html  proposal_form.html
templates/users/: login.html
