[project]
name = "barter-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.0",
    "djlint>=1.36.4",
    "ipykernel>=6.29.5",
]
